# image-analyser

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-09-image-analyser-v0.1.0.md
docs/superpowers/specs/: 2026-05-08-image-analyser-design.md
examples/: basic_usage.md
src/image_analyser/: __init__.py  __main__.py  api.py  app.py  barcode.py  caption.py  cli.py  colour.py  diagram.py  embedding.py  exceptions.py  hashing.py  image_analyser.py  manifest.py  metadata.py  objects.py  ocr.py  quality.py  schemas.py
tests/: conftest.py  test_analyser.py  test_app.py  test_barcode.py  test_caption.py  test_cli.py  test_colour.py  test_diagram.py  test_embedding.py  test_hashing.py  test_invariants.py  test_metadata.py  test_objects.py  test_ocr.py  test_public_api.py  test_quality.py  test_schemas.py
tests/fixtures/: make_fixtures.py
