[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-analyser"
version = "0.4.0"
description = "Static image analysis (CLI + FastAPI) for the analyser family"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Michael Borck", email = "michael.borck@curtin.edu.au"}]
keywords = ["image", "analysis", "exif", "ocr", "captioning", "object-detection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "pillow>=10",
    "pillow-heif>=0.16",
    "numpy>=1.26",
    "imagehash>=4.3",
    "pyzbar>=0.1.9",
    "c2pa-python>=0.5",
    "pydantic>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.9",
    # Contract scaffolding; [ratelimit] brings slowapi for add_rate_limit.
    # (CLI is argparse + run_contract_subcommands now — typer dropped.)
    "lens-contract[ratelimit]>=0.2.0",
]

[project.optional-dependencies]
ml  = ["torch>=2.2", "transformers>=4.40", "accelerate>=0.30"]
ocr = ["pytesseract>=0.3.10", "easyocr>=1.7"]
api = ["anthropic>=0.30", "openai>=1.30", "google-genai>=0.3"]
all = ["image-analyser[ml,ocr,api]"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    "build>=1.2",
    "twine>=5",
]

# Local dev: resolve lens-contract from the sibling checkout. uv strips this from
# the published wheel, which keeps the plain `lens-contract[ratelimit]>=0.2.0` PyPI pin.
[tool.uv.sources]
lens-contract = { path = "../lens-contract", editable = true }

[project.scripts]
image-analyser = "image_analyser.cli:main"

[project.urls]
Homepage = "https://github.com/michael-borck/image-analyser"
Issues = "https://github.com/michael-borck/image-analyser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/image_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow' --strict-markers"
markers = [
    "slow: tests that load real ML models or OCR engines — opt-in with `pytest -m slow`",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
